# ws-compare

./: LICENSE  README.md
go/: Dockerfile  go.mod  go.sum  main.go
go/handler/: fibonacci.go  greeting.go  handler.go  helloWorld.go  response.go  routes.go
go/model/: fibonacci.go  greet.go  helloWorld.go
go/service/: fibonacci.go  greet.go  helloWorld.go
java/: Dockerfile  pom.xml
java/src/main/java/webservice/: FibonacciService.java  HelloActor.java  HelloMessages.java  HelloService.java  WSServer.java  WebService.java  WebServiceMain.java
java/src/main/java/webservice/fibonacci/: FibonacciService.java  FibonacciView.java
java/src/main/java/webservice/greeting/: GreetingService.java  GreetingView.java
java/src/main/java/webservice/hello/: HelloService.java  HelloView.java
rust/: Cargo.toml  Dockerfile
rust/src/: main.rs
rust/src/app/: mod.rs
rust/src/app/fibonacci/: fibonacci.rs  mod.rs
rust/src/app/greet/: greeting.rs  mod.rs
rust/src/app/hello/: helloworld.rs  mod.rs
