[package]
name = "webservice"
version = "0.1.0"
authors = ["Dexter Darwich"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0-alpha.2"
actix-web = "2.0"
# actix-rt = "1"
serde = "1.0.106"

[profile.dev]
opt-level = 0

[profile.release.package."*"]
codegen-units = 1
opt-level = 3

[profile.release]
opt-level = 3
lto = true
